<resources>
    <string name="app_name" translatable="false">Mint Mind</string>
    <integer name="com_vk_sdk_AppId">6984087</integer>
    <string name="facebook_app_id" translatable="false">591830771585042</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb591830771585042</string>


    <string name="fragment_search" translatable="false">Search</string>
    <string name="fragment_chat" translatable="false">Chat</string>
    <string name="fragment_home" translatable="false">Home</string>
    <string name="fragment_profile" translatable="false">Profile</string>
    <string name="fragment_favorite" translatable="false">Favorite</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

   <!-- Описание продукта-->
    <string name="product_name" translatable="false">Имя продукта</string>
    <string name="product_description" translatable="false">Описание товара отсутствует.</string>
    <string name="seller_vk" translatable="false">vk.com/id</string>
    <string name="seller_id" translatable="false">instagram.com/id/</string>
    <string name="seller_phone" translatable="false">+375298852785</string>
    <string name="seller_secondname" translatable="false">Фамилия</string>
    <string name="seller_name" translatable="false">Имя</string>
    <string name="seller_count_product" translatable="false">100</string>

    <!--Профиль-->
    <string name="profile_name" translatable="false">Имя</string>
    <string name="profile_secondName" translatable="false">Фамилия</string>
    <string name="profile_city" translatable="false">Город</string>
    <string name="profile_email" translatable="false">Email</string>
    <string name="profile_phone" translatable="false">+375298852785</string>
    <string name="profile_description" translatable="false">Инфа</string>
    <string name="adapter_rating">5/5</string>
    <string name="adapter_createdate">CreateDate</string>
    <string name="adapter_description">Имя товара</string>
    <string name="adapter_sellerName">Имя продавца</string>

    <!--Адаптер-->


</resources>
